fix: complete functional pass - logout button, notifications, real profile, hackathon teams, real downloads, and mentor/faculty registration